# LDA4SOCPR

./: .gitignore  CLAUDE.md  README.md  UMAP_TDA.py  main.py  pyproject.toml
.github/workflows/: pages.yml
LDA_gensim/lda_loop/: all_MC_probabilities_rel_16-30.csv  gensim_dictionary_16.pkl  gensim_dictionary_8.pkl  gensim_model_10.pkl  gensim_model_11.pkl  gensim_model_12.pkl  gensim_model_13.pkl  gensim_model_14.pkl  gensim_model_15.pkl  gensim_model_16.pkl  gensim_model_17.pkl  gensim_model_18.pkl  gensim_model_19.pkl  (+19 more)
data/: abundance_pinkerton2020.csv  hex_effort_res2.csv  hex_effort_res3.csv  hex_features_res2.csv  hex_features_res3.csv  hex_metadata_res2.csv  hex_metadata_res3.csv  salp_euphausiid_index.csv  table1_pinkerton2020.csv  taxon_annotations.csv
figures/: fronts_data.js  hex_res2.js  hex_res3.js  index.html  lda_k10.js  lda_k3.js  lda_k7.js  nmf_analysis_log.html  nmf_data.js  nmf_umap_explorer.html  nmf_weights.js  pf_weekly_data.js  world_data.js
nmf_results/: a_ranksel.tsv  rank_res.pkl
notebooks/: CPR_D3_Explorer.py  LDA_CPR.py  Mapper_Analysis.py  UMAP_Haxbin.py  UMAP_TDA.py  UMAP_TDA_raw_data.py  build_topic_tables.py  catch_up.py  data_exploration.py  download_all_blueant_data.R  download_env_data.py  download_sst_seaice.R  hex_sampling_analysis.py  jaccard_distance.py  nmf_ensemble_umap.py  pinkerton_grouping.py  preprocess_hex_viz.py  preprocess_nmf_viz.py  preprocess_pf_weekly.py  preprocess_viz.py  preprocessing.py  umap_with_env.py
scripts/: assign_antarctica_distance.py  assign_pf_distance.py  assign_sst_sic.py  test_blueant_assign.R
(+1563 files in other folders)
